chore(build): Change kover exclusion, add jvm args